--- a/problem-set-6.html
+++ b/problem-set-6.html
@@ -93,7 +93,7 @@
     <!-- EXERCISE 4: TRIANGLE -->
     <div class="exercise" id="exercise4">
       <div style="text-align: center;">
-        <button onclick = "drawTriangle()">Triangle</button>
+        <button onclick ="drawTriangle()">Triangle</button>
         <button onclick="example('drawTriangle')">Example</button>
       </div>
 
@@ -117,7 +117,7 @@
     <!-- EXERCISE 5: SMILE -->
     <div class="exercise" id="exercise5">
       <div style="text-align: center;">
-        <button>Smile</button>
+        <button onclick="drawSmileyFace()">Smile</button>
         <button onclick="example('drawSmileyFace')">Example</button>
       </div>
 
